fix: model position on mobile

--- a/Components/NavBar/NavBar.module.css
+++ b/Components/NavBar/NavBar.module.css
@@ -73,7 +73,13 @@
     overflow-y: scroll;
     inset: 0 0 0 0;
     background-color: var(--primary-background);
-    z-index: 11;
+    z-index: 111111;
+}
+.mobile_menu_link{
+    text-decoration: none;
+    margin: 2rem 0;
+    color: #fff;
+    font-size: 1.2rem;
 }
 
 @media only screen and (max-width:35em) {
@@ -128,8 +134,8 @@
     }
 
     .modelBox {
-        position: absolute;
-        inset: 0 0 -70% 0;
-
+        position: fixed;
+        top: 0;
+        left: 0;
     }
 }
